--- a/ProjectSourceCode/views/pages/closet.hbs
+++ b/ProjectSourceCode/views/pages/closet.hbs
@@ -7,7 +7,6 @@
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl7/1L_dstPt3HV5HzF6Gvk/e9T9hXmJ58bldgTk+"
       crossorigin="anonymous"
     />
 
@@ -17,7 +16,7 @@
       top: 56px; 
       left: 12.5%; 
       width: 87.5%;
-      height: 800px; 
+      max-height: calc(100vh - 56px); /* Calculate the height based on the viewport height minus any fixed top position */
       overflow-y: auto; 
       padding: 30px; 
       display: grid;
@@ -29,6 +28,7 @@
       border: none;
       height: 550px; 
       width: 220px;
+      overflow:auto;
       box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 1px 3px 0 rgba(0, 0, 0,
       0.19); 
       transition: transform 0.3s ease-in-out; 
@@ -122,7 +122,6 @@
       </div>
     </div>
   </div>
-
   <body>
     <div>
       {{> message}}
@@ -219,15 +218,6 @@
 
     <!-- Add Bootstrap JS CDN -->
     <script src="../../js/closetScript.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-      integrity="sha384-oBqDVmMz4fnFO9gybB5IXNxFwWQfE7u8Lj+XJHAxKlXiG/8rsrtpb6PEdzD828Ii"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
-      integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"  crossorigin="anonymous"></script>
   </body>
 </html>
