Minor fixes to account details

--- a/ProjectSourceCode/views/pages/accountDetails.hbs
+++ b/ProjectSourceCode/views/pages/accountDetails.hbs
@@ -99,7 +99,7 @@
                 <section class="form-section">
                     <h2>User Information</h2>
                     <p>Username: {{user.username}}</p>
-                    <p>Name: {{user.first_name}} {{user.last_name}}</p>
+                    <p>Name: {{user.firstName}} {{user.lastName}}</p>
                 </section>
                 <section class="form-section">
                     <h2>Closet Preference</h2>
