--- a/ProjectSourceCode/views/pages/outfits.hbs
+++ b/ProjectSourceCode/views/pages/outfits.hbs
@@ -74,6 +74,7 @@
           <div class="fixed-div">
             
             {{#each outfits}}
+            <a href="/outfit?id={{this.outfit_id}}">
               <div class="col-md-4">
                 <div class="card">
                   <img
@@ -88,6 +89,7 @@
                   </div>
                 </div>
               </div>
+            </a>
             {{/each}}
           </div>
         </div>
