--- a/ProjectSourceCode/views/pages/gallery.hbs
+++ b/ProjectSourceCode/views/pages/gallery.hbs
@@ -134,7 +134,7 @@
                         data-image="{{this.imageUrl}}" 
                         data-description="{{this.description}}" 
                         data-brand="{{this.brand}}" 
-                        data-categoryid="{{this.categoryid}}">
+                        data-categoryid="{{this.categoryid}}" value="Add to Closet">
                     Add to Closet
                 </button>
             </div>
