--- a/ProjectSourceCode/views/pages/outfit.hbs
+++ b/ProjectSourceCode/views/pages/outfit.hbs
@@ -13,6 +13,9 @@
         .item-image {
             max-width: 100px;
         }
+        a:link {
+            text-decoration: none!important;
+        }
     </style>
   </head>
 
@@ -34,7 +37,7 @@
                     alt="Beanie" 
                     class="item-image"> 
             </div>
-            <div class="col" style="text-decoration: none; text-background-none; text-color:gray;">
+            <div class="col" style="color: black; text-decoration: none!important;">
                 {{this.name}}
             </div>
         </div>
