--- a/ProjectSourceCode/views/pages/outfit.hbs
+++ b/ProjectSourceCode/views/pages/outfit.hbs
@@ -57,7 +57,7 @@
                 </form> 
             </div>
             <div class = "text-end mt-3 mr-3">
-                <button class = "btn btn-outline-secondary" href="/closet"> Back to Closet</button>
+                <a class = "btn btn-outline-secondary" href="/closet"> Back to Closet</a>
             </div>
         </div> 
     </div>
