Amazon API Integration & continuity fixes

--- a/ProjectSourceCode/views/layouts/main.hbs
+++ b/ProjectSourceCode/views/layouts/main.hbs
@@ -1,10 +1,11 @@
-<!-- TODO: Add the head.hbs partial here -->
 {{> head}}
-<!-- TODO: Add the nav.hbs partial here -->
 
-<!-- I put the search nav bar here for now, need to add if/else statements later for whether we're on gallery or closet view -Linh -->
-{{> navWithSearch}}
+{{#unless isGalleryPage}}
+  {{> navNoSearch}}
+{{else}}
+  {{> navWithSearch}}
+{{/unless}}
+
 {{> sidebar}}
 {{{body}}}
-<!-- TODO: Add the footer.hbs partial here -->
 {{> footer}}
