--- a/ProjectSourceCode/views/partials/navNoSearch.hbs
+++ b/ProjectSourceCode/views/partials/navNoSearch.hbs
@@ -3,8 +3,8 @@
     <img
       src="../../img/LookLoom.jpg"
       alt="LookLoomLogo"
-      height="30px"
+      height="60px"
+      width="auto"
     />
-    <h2>LookLoom</h2>
   </div>
 </nav>
