Small card fixes

--- a/ProjectSourceCode/views/pages/gallery.hbs
+++ b/ProjectSourceCode/views/pages/gallery.hbs
@@ -80,9 +80,8 @@
                 <button type="button" class="addToCloset btn btn-success" 
                         data-name="{{this.productDescription}}" 
                         data-price="{{this.price}}" 
-                        data-image="{{this.imageUrl}}" 
-                        data-description="{{this.description}}" 
-                        data-brand="{{this.brand}}" 
+                        data-image="{{this.imgUrl}}" 
+                        data-description="This product has been rated {{this.productRating}}."
                         data-categoryid="{{this.categoryid}}" value="Add to Closet">
                     Add to Closet
                 </button>
