--- a/ProjectSourceCode/views/pages/gallery.hbs
+++ b/ProjectSourceCode/views/pages/gallery.hbs
@@ -8,7 +8,7 @@
         top: 56px;
         left: 12.5%;
         width: 87.5%;
-        height: 100%;
+        max-height: calc(100vh - 56px); /* Calculate the height based on the viewport height minus any fixed top position */
         overflow-y: auto;
         padding: 30px;
         display: grid;
