--- a/ProjectSourceCode/views/pages/outfit.hbs
+++ b/ProjectSourceCode/views/pages/outfit.hbs
@@ -47,7 +47,7 @@
                 <h1>{{this.outfit.outfit_name}}</h1>
             </div>
             <h4>Owned by: {{this.owner.first_name}} {{this.owner.last_name}}</h4>
-            <h5>Total Price: $80000</h5>
+            <!--<h5>Total Price: $80000</h5>-->
             <p>{{this.outfit.description}}
             </p>
             <div class="d-flex flex-col gap-2">
