--- a/ProjectSourceCode/views/pages/outfits.hbs
+++ b/ProjectSourceCode/views/pages/outfits.hbs
@@ -84,7 +84,7 @@
                   />
                   <div class="card-body">
                     <h5 class="card-title">{{this.outfit_name}}</h5>
-                    <p class="card-text">Total Price: ${{this.price}}</p>
+                    <!--<p class="card-text">Total Price: ${{this.price}}</p>-->
                     <p class="card-text">{{this.description}}</p>
                   </div>
                 </div>
