change to message partial

--- a/ProjectSourceCode/views/pages/closet.hbs
+++ b/ProjectSourceCode/views/pages/closet.hbs
@@ -71,6 +71,7 @@
         z-index: 999;
         width: 87%;
         margin-left: 13%;
+        margin-top: 1.5%;
       }
     </style>
   </head>
